commonwordfinder_mmap was the fastest version I could make finds 10 most common word from the bible in .213 seconds(machine difference possible) and .313 for all the words in the bible

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,10 @@
-CXXFLAGS = -std=c++14 -g -Wall -pedantic -Werror
+CXXFLAGS = -O3 -std=c++14 -g -Wall -pedantic -Werror
 
-noinst_PROGRAMS = commonwordfinder commonwordfinder_vector commonwordfinder_mmap
+noinst_PROGRAMS = tester commonwordfinder commonwordfinder_vector commonwordfinder_mmap
 
 COMMON = node.h rbtree.h tree.h treeprinter.h
 
-commonwordfinder_SOURCES = commonwordfinder.cpp
-commonwordfinder_vector_SOURCES = commonwordfinder_vector.cpp
-commonwordfinder_mmap_SOURCES = commonwordfinder_mmap.cpp
+commonwordfinder_SOURCES = COMMON commonwordfinder.cpp
+commonwordfinder_vector_SOURCES = COMMON commonwordfinder_vector.cpp
+commonwordfinder_mmap_SOURCES = COMMON commonwordfinder_mmap.cpp
+tester_SOURCES = COMMON tester.cpp
